Fix(Thumb): width on mobile

--- a/src/components/Gallery/Thumb/Thumb.module.css
+++ b/src/components/Gallery/Thumb/Thumb.module.css
@@ -56,6 +56,10 @@
 
 /* --------------- Tablet & Mobile --------------- */
 @media (max-width: 992px) {
+  .link {
+    width: 100%;
+  }
+
   .container {
     width: 100%;
     height: 225px;
